# alsatian

./: .gitignore  pyproject.toml
baseline_cezary/analysis/: huggingface_models_plots.ipynb  resnet152_sweep_data.ipynb  resnet18_sweep_data.ipynb  trained_snapshot_plots.ipynb
baseline_cezary/analysis/data/: resnet152_sweep_data.csv  resnet18_sweep_data.csv
baseline_cezary/approaches/: baseline.py  nn_proxy.py  sweep.py
baseline_cezary/models/: init_models.py  sequential_bert.py  split_indices.py
baseline_cezary/util/: init_hf_models.py  model_operations.py  quantization.py
custom/models/: custom_mobilenet.py  init_models.py  sequential_bert.py
data/cub-birds-200/: prepare_data.py
data/food-101/: prepare_data.py
data/stanford-dogs/: prepare_data.py
experiments/dummy_experiments/: dummy_model_snapshots.py
experiments/main_experiments/model_search/: model_search_exp.py  run_experiment_set_bert.py  run_experiment_set_hf_snapshots.py  run_experiment_set_hf_snapshots_load_full.py  run_experiment_set_limited_mem-10gb.py  run_experiment_set_limited_mem-5gb.py  run_experiment_set_limited_mem-64gb.py  run_experiment_set_synthetics_snapshots.py  run_experiment_set_trained_snapshots.py
experiments/main_experiments/prevent_caching/: host_watch_script.py  watch_utils.py
experiments/micro_benchmarks/layer_io_vs_compute_bound/: plot.py
global_utils/: env_info.py  write_results.py
hf_model_analysis/model_lists/: facebook-detr-resnet-50.txt
model_search/approaches/: baseline.py
model_search/proxies/: nn_proxy.py
(+11 files in other folders)
