[project]
name = "alsatian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "numpy>=1.24.4",
    "pillow>=10.4.0",
    "psutil>=7.0.0",
    "requests>=2.32.4",
    "scipy>=1.10.1",
    "torch>=2.5.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "transformers>=4.46.3",
]
